# drone-lidar-experiments

./: README.md
3D Prints & Models/: Pan Tilt Small Drone Mount v3.f3d  Pan Tilt Small Drone Mount v3.stl  Pan Tilt Small Drone Mount v4.f3d  Pan Tilt Small Drone Mount v4.stl  Pan Tilt Small Drone Mount v6.f3d  Pan Tilt Small Drone Mount v6.stl  Pan Tilt Small Drone Mount.f3d  Pan Tilt Small Drone Mount.f3d.step  Pan Tilt Small Drone Mount.stl
data-collection/: collect_data.py  remove_corrupted_files.py  visuallyInspectDroneData.m
data-collection/config/: 99-usb-serial-drone-controller.rules  README.md  adc-config.toml  digitizer.toml  range-calibration.toml  (+1 more)
motor-control/: README.md  motor_control.py  pyproject.toml
motor-control/src/motor_control/: __init__.py  motor_control.py
mounting-brackets/: Pan Tilt Large Drone Mount v11.f3d  Pan Tilt Large Drone Mount v11.stl  Pan Tilt Large Drone Mount v12.f3d  Pan Tilt Large Drone Mount v12.stl  Pan Tilt Large Drone Mount v13.f3d  Pan Tilt Large Drone Mount v13.stl  Pan Tilt Large Drone Mount v6.f3d  Pan Tilt Large Drone Mount v6.stl  Pan Tilt Large Drone Mount v7.f3d  Pan Tilt Large Drone Mount v7.stl  Pan Tilt Large Drone Mount v8.f3d  Pan Tilt Large Drone Mount v8.stl  Pan Tilt Small Drone Mount v10.f3d  Pan Tilt Small Drone Mount v10.stl  Pan Tilt Small Drone Mount v7.f3d  Pan Tilt Small Drone Mount v7.stl  Pan Tilt Small Drone Mount v8.f3d  Pan Tilt Small Drone Mount v8.stl  Pan Tilt Small Drone Mount v9.f3d  Pan Tilt Small Drone Mount v9.stl  README.md  happymodel-crux3-mount.f3d  happymodel-crux3-mount.stl
(+2 files in other folders)
